requirements file updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Core Web App
 fastapi==0.115.12
 uvicorn[standard]==0.34.3
+joblib==1.5.1
+scikit-learn==1.6.1
 
 # Data interchange / form support
 python-multipart==0.0.20
